--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
-group 'com'
-version '1.0-SNAPSHOT'
-
+group 'com.scndgen'
+version '2.17.04.15'
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'idea' //run idea to resolve dependencies in intellij
-
-sourceCompatibility = '1.8'
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 project.ext.jarDir = 'libs'
@@ -28,7 +27,7 @@ dependencies {
 jar {
     manifest {
         attributes (
-                "Implementation-Title": "The SCND Genesis: Legacy",
+                "Implementation-Title": project.ext.name,
                 "Implementation-Version": "1.0",
                 "Main-Class": project.ext.mainClass,
                 "Class-Path": configurations.compile.collect { "libs/$it.name"}.join(' '),
