--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ version '2.17.04.15'
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'idea' //run idea to resolve dependencies in intellij
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 project.ext.jarDir = 'libs'
