--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ version '2.17.04.15'
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'idea' //run idea to resolve dependencies in intellij
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 project.ext.jarDir = 'libs'
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
     compile 'mysql:mysql-connector-java:5.1.36'
+    compile 'io.github.subiyacryolite:jds:1.170414'
     compile 'commons-codec:commons-codec:1.9'
     compile 'commons-lang:commons-lang:2.6'
     runtime 'net.java.jinput:jinput-platform:2.0.6'
@@ -27,7 +28,7 @@ dependencies {
 jar {
     manifest {
         attributes (
-                "Implementation-Title": project.ext.name,
+                "Implementation-Title": rootProject.name,
                 "Implementation-Version": "1.0",
                 "Main-Class": project.ext.mainClass,
                 "Class-Path": configurations.compile.collect { "libs/$it.name"}.join(' '),
