--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
 group 'com.scndgen'
 version '2.17.04.15'
 apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'idea' //run idea to resolve dependencies in intellij
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
@@ -14,11 +12,12 @@ repositories {
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/com.googlecode.soundlibs/vorbisspi
     compile 'io.github.subiyacryolite:jds:1.170414'
     compile 'commons-codec:commons-codec:1.9'
     compile 'commons-lang:commons-lang:2.6'
     compile 'org.xerial:sqlite-jdbc:3.7.2'
+    compile 'org.jcraft:jorbis:0.0.17'
+    compile 'com.googlecode.soundlibs:jorbis:0.0.17.4'
     testCompile 'junit:junit:4.11'
 }
 
