--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 group 'com.scndgen'
 version '2.17.04.15'
 apply plugin: 'java'
-apply plugin: 'idea'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
@@ -18,6 +17,9 @@ dependencies {
     compile 'commons-lang:commons-lang:2.6'
     compile 'org.xerial:sqlite-jdbc:3.7.2'
     compile 'com.github.trilarion:vorbis-support:1.1.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr2'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr2'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr2'
     testCompile 'junit:junit:4.11'
 }
 
@@ -25,9 +27,10 @@ jar {
     manifest {
         attributes (
                 "Implementation-Title": rootProject.name,
-                "Implementation-Version": "1.0",
+                "Implementation-Version": project.version,
+                "Created-By" : "${System.getProperty("java.version")} (${System.getProperty("java.specification.vendor")})",
                 "Main-Class": project.ext.mainClass,
-                "Class-Path": configurations.compile.collect { "libs/$it.name"}.join(' '),
+                "Class-Path": configurations.runtime.collect { "libs/$it.name"}.join(' '),
         )
     }
 }
