--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,17 @@
-# Created by .ignore support plugin (hsz.mobi)
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-
-/.idea/
-## File-based project format:
 *.iws
-# IntelliJ
+*.ipr
+*.iml
+/.idea/
+/.nb-gradle/
+/.gradle/
+/build/
 /out/
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
+/classes/
+/.idea_modules/
 atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-### Gradle template
-/.nb-gradle/
-/.gradle/
-/build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
-src/main/resources/assets/Azaria/.svn/
-src/main/resources/assets/audio/pacdv.com/license.txt~
-src/main/resources/assets/stages/gausb.txt~
-src/test/resources/
 local.properties
+!gradle-wrapper.jar
