--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,10 @@ plugins {
 }
 
 group 'com.scndgen'
-version '22.05.04'
-
-sourceCompatibility = 17
-targetCompatibility = 17
-
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+version '24.12.05'
 
 project.ext.mainClass = 'com.scndgen.legends.ScndGenLegends'
-project.ext.lwjglVersion = "3.3.1"
+project.ext.lwjglVersion = "3.3.4"
 
 switch (OperatingSystem.current()) {
     case OperatingSystem.LINUX:
@@ -36,7 +31,7 @@ switch (OperatingSystem.current()) {
 }
 
 javafx {
-    version = "17"
+    version = "21"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
@@ -45,16 +40,21 @@ repositories {
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/"}
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 dependencies {
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
-    implementation "io.github.subiyacryolite:jds:3.2.2-SNAPSHOT"
     implementation "commons-codec:commons-codec:1.15"
     implementation "org.apache.commons:commons-lang3:3.12.0"
     implementation "commons-io:commons-io:2.11.0"
-    implementation "org.xerial:sqlite-jdbc:3.36.0.3"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.13.2.2"
-    implementation "com.fasterxml.jackson.core:jackson-core:2.13.2"
-    implementation "com.fasterxml.jackson.core:jackson-annotations:2.13.2"
+    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+    implementation "com.fasterxml.jackson.core:jackson-core:2.13.4"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:2.13.4"
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-openal"
     implementation "org.lwjgl:lwjgl-stb"
